--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   http: ^1.2.2
   flutter:
     sdk: flutter
+  provider: ^6.1.2
+  shared_preferences: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
